--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: johndoe
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: chatapp
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - my_postgres_data:/var/lib/postgresql/data
 
